app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: httpd
        ports:
        - containerPort: 80


---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  type: NodePort
  ports:
    - port: 81
      targetPort: 80      #container port
      nodePort: 30005
