app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  selector:
    app: app1
  # annotations:
  #   alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
  # type: NodePort
  ports:
    - port: 82
      targetPort: 80   #container port
      # nodePort: 30002
