app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  selector:
    app: app2
  # annotations:
  #   alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
  # type: NodePort
  ports:
    - port: 83
      targetPort: 80   #container port
      # nodePort: 30002
