ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
 
spec:
  rules:
  - host: app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            port: 
              number: 80
      - path: /app1
        pathType: Prefix 
        backend:
          service:
            name: app1
            port: 
              number: 80

      - path: /app2
        pathType: Prefix 
        backend:
          service:
            name: app2
            port: 
              number: 80
